2004-07-01  Andy Wingo  <wingo@pobox.com>

	* gnome/contrib/texinfo-buffer.scm (gnome): Fix module name.

2004-06-30  Andy Wingo  <wingo@pobox.com>

	* TODO: New file, for random thoughts.

	* Merged changelogs, again. I need to star-merge with head now...

	* gnome/gtk/gdk-event.scm: Fixed references to bogus g-wrap
	modules.

	* gnome/contrib/texinfo-buffer.scm: New file. Like what
	(text structured gtk-text-buffer) was, but a lot cleaner now. (And
	a lot shorter, incidentally.) Renders texinfo, expressed as SXML,
	into a GtkTextBuffer.

	* gnome/contrib/Makefile.am: New file.

	* gnome/contrib/: New directory. The thought is for (gnome
	contrib) to be a place where people can contribute useful
	scheme-only library code based on the gnome modules.

2004-06-22  Andreas Rottmann  <a.rottmann@gmx.at>

	* gtk-spec.scm, gdk-spec.scm: Fix for G-Wrap #:dependencies API
	change.

2004-06-21  Jan Nieuwenhuizen  <janneke@gnu.org>

	* gnome/gtk/gdk-event.scm (gdk-event-button:button):
	(gdk-event-button:x):
	(gdk-event-button:y):
	(gdk-event-button:x-root):
	(gdk-event-button:y-root): New function.
       
2004-05-26  Jan Nieuwenhuizen  <janneke@gnu.org>

	* examples/canvas.scm: Remove.

2004-05-22  Andy Wingo  <wingo@pobox.com>

	* guile-gtk.pc.in, guile-gtk-uninstalled.pc.in, files.ac: New
	files.

2004-05-19  Andy Wingo  <wingo@pobox.com>

	* ChangeLog: All GTK+ changelogs have been merged, with non-gtk
	items elided.

	* gnome/gtk.scm (gnome): The main glib wrapper depends on gobject, so
	put it after gobject to show times better. Also add goops to the
	startup list. (This should eventually go away when (gnome gtk) is
	really fast.)

2004-05-17  Andreas Rottmann  <a.rottmann@gmx.at>

	* gtk-support.h, gtk-support.c (_wrap_gtk_dialog_get_vbox)
	(_wrap_gtk_dialog_get_action_area): New functions.

	* Makefile.am (guilegtkmodule_DATA): Fixed, now is
	guilegwmodule_DATA.

2004-04-02  Andreas Rottmann  <a.rottmann@gmx.at>
